syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.LexingCoOrdering";
option java_outer_classname = "LexingCoOrderingServiceImpl";

package LexingCo;

service LexingCoOrderingService{
  rpc orderStock(WarehouseRestockRequest) returns (OrderRestockReply){}
  rpc orderStockServerStream(WarehouseRestockRequest) returns (stream OrderRestockReply){}
  rpc orderRepairStockBiDiStream(WarehouseRestockRequest) returns (stream OrderRestockReply){}

}

message WarehouseRestockRequest{
  string text = 1;
}

message OrderRestockReply{
  string text = 2;
}